--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p><p>welcome to the oficial site</p></p>
+        <p><p><p>Welcome to the official Space Game site!</p></p></p>
     </div>
 </section>
 <section class="download">
